--- a/starter/package.json
+++ b/starter/package.json
@@ -13,6 +13,7 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.685.0",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
@@ -22,6 +23,7 @@
     "@tanstack/react-table": "^8.8.5",
     "@visx/pattern": "^3.0.0",
     "apexcharts": "^3.37.3",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "d3-dsv": "^3.0.1",
