--- a/organized_backend/package.json
+++ b/organized_backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,6 +24,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/formidable": "^3.4.5",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
