--- a/starter/package.json
+++ b/starter/package.json
@@ -30,6 +30,7 @@
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.2",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^10.8.5",
     "history": "^5.3.0",
@@ -37,6 +38,7 @@
     "i18next": "^22.4.13",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.47",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -66,8 +68,10 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/d3-fetch": "^3.0.2",
     "@types/d3-scale": "^4.0.3",
+    "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.5",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.0.28",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
