--- a/organized_backend/package.json
+++ b/organized_backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "formidable": "^3.5.2",
+    "json2csv": "^6.0.0-alpha.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4"
   },
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/formidable": "^3.4.5",
+    "@types/json2csv": "^5.0.7",
     "@types/multer": "^1.4.12",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
