--- a/organized_backend/package.json
+++ b/organized_backend/package.json
@@ -19,7 +19,8 @@
     "formidable": "^3.5.2",
     "json2csv": "^6.0.0-alpha.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
