--- a/starter/package.json
+++ b/starter/package.json
@@ -62,6 +62,7 @@
     "react-tooltip": "^5.11.1",
     "redux-persist": "^6.0.0",
     "twin.macro": "^3.3.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.1.1"
   },
   "devDependencies": {
